--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ plugins:
   - jekyll-feed
 
 # Set timezone
-timezone: America/New_York
+timezone: Asia/Tokyo
 
 # Exclude from processing.
 # The following items will not be processed, by default.
